Fixing password requirements list wrap

--- a/src/styles/sign-up-and-log-in.css
+++ b/src/styles/sign-up-and-log-in.css
@@ -155,7 +155,7 @@ button:disabled:hover{
 }
 
 
-
+/*
 #pass-req-list{
   list-style-position: inside;
   columns: 2;
@@ -165,7 +165,26 @@ button:disabled:hover{
   margin-bottom: 0;
   margin-top: 5px;
 }
+*/
 
 #pass-req-list li{
   font-size: 17px;
+}
+
+
+#pass-req-list{
+  list-style-position: inside;
+
+  padding: 0;
+  padding-left: 10px;
+  margin-bottom: 0;
+  margin-top: 5px;
+
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-rows: repeat(3, minmax(0, auto));
+}
+
+#pass-req-list > li[hidden]{
+  display: none; 
 }
